Don't wrap white preserved spaces at the end of the line

Still preliminary approach.

Bug: 768363
Change-Id: Ia62ad8a08470fdf5bc96a7d2e3f8e47b45a646ba